# haskimail-python

./: .gitignore  CHANGELOG.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: publish.yml
examples/: error_handling.py  manage_bounces.py  manage_domains.py  manage_templates.py  send_email.py  send_email_batch.py  send_with_attachments.py  send_with_template.py
haskimail/: __init__.py  account_client.py  client.py  exceptions.py  server_client.py
tests/: conftest.py  test_account_client.py  test_server_client.py
wiki/: Home.md  Push-шаблонов.md  Вебхуки.md  Возвраты-(Bounces).md  Домены.md  Исходящие-сообщения.md  Каналы-сообщений.md  Обработка-ошибок.md  Открытия-и-клики.md  Отправка-писем.md  Пакетная-отправка.md  Подписи-отправителей.md  Серверы.md  Статистика.md  Стоп-листы-(Suppressions).md  Удаление-данных.md  Установка-и-настройка.md  Шаблоны.md
