[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "haskimail"
version = "1.0.0"
description = "Official Python client for the Haskimail transactional email API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Dashamail", email = "support@haskimail.ru" },
]
keywords = ["haskimail", "email", "transactional", "smtp", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://haskimail.ru"
Documentation = "https://haskimail.ru/developer"
Repository = "https://github.com/Dashamail/haskimail-python"
Issues = "https://github.com/Dashamail/haskimail-python/issues"

[tool.setuptools.packages.find]
include = ["haskimail*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
